# ext-rayaop

./: .gitignore  CMakeLists.txt  Makefile.frag  README.md  build.sh  config.m4  config.w32  helloworld.php  php_rayaop.h  rayaop.c  rayaop.php  smoke.php  test.php
.github/workflows/: build.yml
docs/: policy.md  review.md  spec.md
include/: php_helloworld.h  php_rayaop.h
php-src/: InterceptedInterface.php
src/: helloworld.c  helloworld_advanced.c  rayaop.c  rayaop_advanced.c
tests/: 000-rayaop-loaded.phpt  001-rayaop-basic.phpt  002-rayaop-error.phpt  003-rayaop-multiple-interceptors.phpt  004-rayaop_method_intercept_init.phpt
